--- a/index.html
+++ b/index.html
@@ -454,6 +454,10 @@
           </div>
           <div class="offcanvas-body">
             <ul id="navbar" class="navbar-nav fw-bold justify-content-end align-items-center flex-grow-1">
+              <li class="nav-item">
+                <a class="nav-link me-5" href="#">Radityo Hazza Mahendra  22.11.4949</a>
+                <a class="nav-link me-5" href="#">Aniq Badrul Munir  22.11.4999</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link me-5 active dropdown-toggle border-0" href="#" data-bs-toggle="dropdown"
                   aria-expanded="false">Home</a>
@@ -554,7 +558,7 @@
             <div class="row g-4">
               <div class="col-lg-12 mb-4">
                 <div class="card d-flex flex-row align-items-end border-0 jarallax-keep-img">
-                  <img src="images/card-image2.jpg" alt="shoes" class="img-fluid jarallax-img">
+                  
                   <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
                     <h2 class="card-title style-2 display-4 light">Sports Wear</h2>
                     <a href="index.html"
@@ -575,14 +579,7 @@
             </div>
           </div>
           <div class="swiper-slide">
-            <div class="card d-flex flex-row align-items-end border-0 large jarallax-keep-img">
-              <img src="images/card-image4.jpg" alt="shoes" class="img-fluid jarallax-img">
-              <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
-                <h2 class="card-title display-3 light">Stylish shoes for men</h2>
-                <a href="index.html"
-                  class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop Now</a>
-              </div>
-            </div>
+           
           </div>
           <div class="swiper-slide">
             <div class="row g-4">
