--- a/index.html
+++ b/index.html
@@ -455,20 +455,22 @@
           <div class="offcanvas-body">
             <ul id="navbar" class="navbar-nav fw-bold justify-content-end align-items-center flex-grow-1">
               <li class="nav-item">
-                <a class="nav-link me-5" href="#">Radityo Hazza Mahendra  22.11.4949</a>
+                <a class="nav-link me-5" href="#">Radityo Hazza Mahendra  22.11.499</a>
                 <a class="nav-link me-5" href="#">Aniq Badrul Munir  22.11.4999</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
+                <a class="nav-link me-5" href="#">Home</a>
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link me-5 active dropdown-toggle border-0" href="#" data-bs-toggle="dropdown"
                   aria-expanded="false">Home</a>
-                <ul class="dropdown-menu fw-bold">
+                 <ul class="dropdown-menu fw-bold">
                   <li>
                     <a href="index.html" class="dropdown-item">Home V1</a>
                   </li>
                   <li>
                     <a href="index.html" class="dropdown-item">Home V2 </a>
                   </li>
-                </ul>
+                </ul> -->
               </li>
               <li class="nav-item">
                 <a class="nav-link me-5" href="#">Men</a>
@@ -476,7 +478,7 @@
               <li class="nav-item">
                 <a class="nav-link me-5" href="#">Women</a>
               </li>
-              <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link me-5 active dropdown-toggle border-0" href="#" data-bs-toggle="dropdown"
                   aria-expanded="false">Page</a>
                 <ul class="dropdown-menu fw-bold">
@@ -505,7 +507,7 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#modallogin" class="dropdown-item">Login</a>
                   </li>
                 </ul>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link me-5" href="index.html">Shop</a>
               </li>
