--- a/index.html
+++ b/index.html
@@ -22,13 +22,22 @@
     rel="stylesheet">
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C3L54E9L00"></script>
+<!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-C3L54E9L00"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-C3L54E9L00');
+</script> -->
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FFELHCNBP6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FFELHCNBP6');
 </script>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
