--- a/index.html
+++ b/index.html
@@ -462,7 +462,10 @@
           </div>
           <div class="offcanvas-body">
             <ul id="navbar" class="navbar-nav fw-bold justify-content-end align-items-center flex-grow-1">
-         
+              <!--<li class="nav-item">
+                <a class="nav-link me-5" href="#">Radityo Hazza Mahendra  22.11.499</a>
+                <a class="nav-link me-5" href="#">Aniq Badrul Munir  22.11.4999</a>
+              --></li>
               <li class="nav-item">
                 <a class="nav-link me-5" href="#">Home</a>
               <!-- <li class="nav-item dropdown">
@@ -1120,16 +1123,20 @@
         <div class="col-md-6">
           <p>© Copyright Stylish 2023.</p>
         </div>
-        <div class="col-md-6 text-lg-end">
-          <p>Free HTML by <a href="https://templatesjungle.com/" target="_blank">TemplatesJungle</a><br> Distributed by <a href="https://themewagon.com" target="blank">ThemeWagon</a> </p>
-        </div>
       </div>
     </div>
   </footer>
   <script src="js/jquery-1.11.0.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
-  
+  <!-- WhatsApp CTA Floating Button -->
+  <a href="https://wa.me/6285243937190" target="_blank" 
+   style="position: fixed; bottom: 20px; right: 20px; background-color: #25D366; color: white; border-radius: 50%; width: 60px; height: 60px; text-align: center; font-size: 30px; box-shadow: 2px 2px 5px rgba(0,0,0,0.3); z-index: 9999;">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30" style="margin-top: 15px;">
+    <path fill="white" d="M380.9 97.1C339-6.3 207.7-31.8 110.1 38.3 27.8 97.9 4.4 209.3 61 288.5l-20.8 89.6c-2.3 10.2 7 19.1 17.3 17l89.6-20.8c79.1 56.5 190.6 33.2 250.2-49 70.1-97.6 44.6-228.9-36.4-289.2zM222.8 338.2c-30.6-13-55.3-37.8-68.3-68.3l-4.2-9.8c-3-7 1.1-15 8.7-16.2l28.5-4.7c7.1-1.2 13.6 3.5 15.5 10.6l4.1 14.8c2.4 8.6 9.4 15.6 18.1 18.1l14.8 4.1c7.1 1.9 11.8 8.4 10.6 15.5l-4.7 28.5c-1.2 7.6-9.2 11.7-16.2 8.7l-9.8-4.2z"/>
+  </svg>
+  </a>
+
 </body>
 
 </html>
