--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Stylish - Shoes Online Store HTML Template</title>
+  <title>Stylish.io – Custom CSS Themes & Skins for Any Website</title>
+  <meta name="description" content="Stylish.io menyediakan tema dan skin CSS gratis untuk menyesuaikan tampilan situs favoritmu. Eksplorasi, edit, dan bagikan gaya unikmu!">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,18 @@
   <meta name="author" content="TemplatesJungle">
   <meta name="keywords" content="Online Store">
   <meta name="description" content="Stylish - Shoes Online Store HTML Template">
+
+
+   <!-- SEO Tags -->
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="en">
+  <meta name="author" content="Your Brand Name">
+  <meta property="og:title" content="Stylish - Shoes Online Store">
+  <meta property="og:description" content="Discover Stylish Shoes for Men & Women - Shop Online">
+  <meta property="og:image" content="https://fransme.github.io/Stylish.io/images/card-image1.jpg">
+  <meta property="og:url" content="https://fransme.github.io/Stylish.io">
+  <meta name="twitter:card" content="summary_large_image">
+
 
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -30,6 +43,18 @@
 
   gtag('config', 'G-C3L54E9L00');
 </script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Stylish.io",
+  "url": "https://fransme.github.io/Stylish.io",
+  "description": "Platform tema CSS kustom untuk berbagai website."
+}
+</script>
+
+
 <body>
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol xmlns="http://www.w3.org/2000/svg" id="shopping-carriage" viewBox="0 0 24 24" fill="none">
@@ -1119,6 +1144,7 @@
           </div>
         </div>
       </div>
+      
       <div class="row">
         <div class="col-md-6">
           <p>© Copyright Stylish 2023.</p>
