--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
-  "name": "Stylish.io",
+  "name": "Stylish",
   "url": "https://fransme.github.io/Stylish.io",
   "description": "Platform tema CSS kustom untuk berbagai website."
 }
